# opengl-sandbox

./: .gitignore  CMakeLists.txt  makefile
app/: CMakeLists.txt  main.cpp
cmake/: Packages.cmake
tests/: example.cpp  microphone_test.cpp
